# multifamily_hvac_system_data_analysis

./: .gitignore  FINDINGS.md  LICENSE  README.md  WHAT_CHANGED_RECS.md  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
analysis/fm_mf_survey/: 01_load_and_classify.py  02_exploratory_distributions.py  03_statistical_testing.py  04_climate_controlled.py  05_fuel_breakdown.py  06_compare_with_rbsa.py  README.md  __init__.py
analysis/mf_survey/: 01_load_and_classify.py  02_exploratory_distributions.py  03_statistical_testing.py  04_climate_controlled.py  05_fuel_breakdown.py  06_compare_with_rbsa.py  README.md
analysis/rbsa/: 00_sanity_checks.py  01_build_curated_mf_table.py  02_exploratory_distributions.py  02_sanity_checks.py  03_statistical_testing.py  04_climate_vintage_controlled.py  05_fuel_breakdown.py  06_compare_with_fm.py  README.md  build_curated_mf_table.py  run_workflow.py
analysis/recs/: 01_build_curated_table.py  02_exploratory_distributions.py  02b_sample_balance_and_prevalence.py  03_statistical_testing.py  04_climate_vintage_controlled.py  05_fuel_breakdown.py  05b_sensitivity_matrix.py  06_compare_with_other.py  07_presentation_plots.py  08_cross_dataset_comparison.py  README.md  run_workflow.py
src/building_systems_energy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/common/: log.py  schema.py  units.py
src/datasets/fm_mf_survey/: __init__.py  classify.py  ingest.py
src/datasets/mf_survey/: classify.py  ingest.py
src/datasets/rbsa/: ingest.py  (+1 more)
tests/: README.md  test_recs_classify.py
(+4 files in other folders)
