[project]
name = "building-systems-energy"
version = "0.2.0"
description = "Workflows to classify HVAC/DHW system configurations and compare energy consumption."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "pyarrow>=12.0",
]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
